- Rename ~yet-kill-emacs-reset-desktop-state~ to ~yet-kill-emacs-reset-desktop~.
- Disable confusing =org-mode= keybindings only if ~yet-org-noob~ is enabled.
- Set user option =org-export-headline-levels= value to 5.
- Disable =org-html-validation-link=.
- =dired-mode= keybinding =n= now calls ~yet-dired-display-next~.
- =dired-mode= keybinding =p= now calls ~yet-dired-display-previous~.

*** Removed
- Package =org-preview-html= in favor of =C-c C-e h o= (~org-export-dispatch~).
- Disable =eglot-report-progress= to reduce clutter in the echo area.

** v2.2.0 - 2023-08-05

This release wraps up further improvements made for *Emacs 28.2*. Future commits
are planned to be *Emacs 29* -oriented (ideally, preserving backward
compatibility).

The main highlights of this release are as follows:
- Better keybindings for =rust-mode=, =php-mode=, =eglot=.
- Local configuration (~yet-~ constants related) improvements.
- =web-mode= usability improvements.
- New packages: =fish-mode=, =imenu-list=.

*** Added
- =rust-mode= abbreviations (templates). See ~M-x list-abbrevs~.
- =rust-mode-map= keybindings:
  - =C-c C-l= for ~M-x rust-run-clippy~.
  - =C-c C-h= for ~M-x yet-rustup-doc~.
  - =C-c t m= for ~M-x rust-toggle-mutability~.
- =php-mode-map= keybinding =C-c C-h= to call ~M-x php-search-documentation~.
- Disable =eglot-inlay-hints-mode= by default.
- Keybinding =C-c l i= to toggle =eglot-inlay-hints-mode=.
- Package =fish-mode= for ~fish~ shell scripts editing.
- Local configuration =yet-source-directory=.
- Experimental: utilize =company-tooltip-annotation-padding=.
- Local configuration =yet-explicit-shell-file-name=.
- Docstrings to ~yet-~ namespaced constants in ~/examples/local-pre-init.el~.
- Local configuration =yet-auth-sources=.
- Local configuration =yet-mail-personal-alias-file=.
- Enable ~shell~ evaluation in =org-mode= buffers.
- Package =imenu-list=. Toggle =imenu-list-minor-mode= with =C-c i s=.
- New optional constants ~yet-font~ and ~yet-font-size~.